--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
 
       <div class="container px-3">
-        <h3 class="border-bottom">Highlighted Projects:</h3>
+        <h3 class="border-bottom">Contact Me:</h3>
 
       </div>
 
