--- a/index.html
+++ b/index.html
@@ -158,8 +158,12 @@
            <div class="card-footer">
              <!-- Web Developement Tag with Popover  -->
              <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-             <!-- iOS Tag with Popover -->
-             <button type="button" class="btn btn-primary btn-sm disabled iOS-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
+
+             <!-- UI Design Tag with Popover -->
+             <button type="button" class="btn btn-primary btn-sm disabled" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">UI Design</button>
+
+             <!-- UX Design Tag with Popover -->
+             <button type="button" class="btn btn-primary btn-sm disabled" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">UX Design</button>
            </div>
          </div>
        </div>
@@ -183,23 +187,31 @@
             <div class="card-footer">
               <!-- Web Developement Tag with Popover  -->
               <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-              <!-- iOS Tag with Popover -->
-              <button type="button" class="btn btn-primary btn-sm disabled iOS-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
+
+              <!-- UI Design Tag with Popover -->
+              <button type="button" class="btn btn-primary btn-sm disabled" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">UI Design</button>
+
+              <!-- UX Design Tag with Popover -->
+              <button type="button" class="btn btn-primary btn-sm disabled" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">UX Design</button>
             </div>
           </div>
         </div>
 
 
-        <!--Highlighted Projects: Project 3  -->
+        <!--Highlighted Projects: Campus Map -  App Extension  -->
         <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project ui-design-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
             <div class="card-body" data-toggle="modal" data-target="#projectModal1">
 
               <!-- Project: Image  -->
-              <img src="./imgs/buildABeer.png" class="img-fluid">
+
+                <img src="./imgs/projects/CampusMap/campusMapScreen01.png" class="img-fluid" style="height: 13rem;">
+                <img src="./imgs/projects/CampusMap/campusMapScreen02.png" class="img-fluid" style="height: 13rem;">
+
+
 
               <!-- Project: Title  -->
-              <h5 class="card-title">The Nanny Shack</h5>
+              <h5 class="card-title">Campus Map - App Extension</h5>
 
               <!-- Project: Brief Descrption -->
               <p class="card-text"> A prototype website build for a..</p>
@@ -245,7 +257,7 @@
     <!-- Project: Full Descriptions -->
 
 
-    <!-- Project 1: Build A Beer  -->
+    <!-- Project 1 Full Description: Build A Beer  -->
 
     <div class="modal fade" id="projectModal1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
@@ -299,8 +311,9 @@
                 <h4>My Roles in the Project</h4>
 
                 <ul>
-                  <li>Brainstorming and sketching initial desings</li>
+                  <li>Brainstorming and sketching initial designs</li>
                   <li>Researching </li>
+                  <li></li>
                   <li> During the course of this project I also worked .The experience in design iteration refined my brain-storming and idea-generating skills, improving my overall understanding of best practices for design work.</li>
                 </ul>
               </div>
