--- a/CPSC581.html
+++ b/CPSC581.html
@@ -190,7 +190,7 @@
             </div>
           </div>
 
-          <!--Project 3: LED Heartbeat   -->
+          <!--Project 3: Life Detector   -->
           <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
             <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
               <div class="card-body" data-toggle="modal" data-target="#project3Card">
@@ -203,7 +203,7 @@
 
                 <br>
                 <!-- Project: Title  -->
-                <h5 class="card-title">Project 3: LED Heartbeat</h5>
+                <h5 class="card-title">Project 3: Life Detector</h5>
 
                 <!-- Project: Brief Descrption -->
                 <p class="card-text"> A project built using arduino that displays the heartbeat pattern of the user, and changes color and speed to reflect the person's heartrate. </p>
@@ -863,7 +863,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-title" id="modalLabel1">Project 3: LED Heartbeat </h2>
+            <h2 class="modal-title" id="modalLabel1">Project 3: Life Detector </h2>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -924,7 +924,7 @@
 
 
               <div class="col col-md-6 col-12">
-                <p> We met in class after having sketched out different ideas, to compare and receive feedback from to choose good ideas to further iterate with. We presented our favorites to the class and based on feedback we received decided to sketch some more ideas for a LED heartbeat idea and a LED hair extension idea. Here are the sketches for these ideas:
+                <p> We met in class after having sketched out different ideas, to compare and receive feedback from to choose good ideas to further iterate with. We presented our favorites to the class and based on feedback we received decided to sketch some more ideas for a Life Detector idea and a LED hair extension idea. Here are the sketches for these ideas:
                 </p>
 
 
@@ -1090,7 +1090,7 @@
             <h4> Video Demonstration: </h4>
 
             <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/xsy5i1rr-PA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/DxfFG0FaRt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <br>
             <br>
