--- a/CPSC581.html
+++ b/CPSC581.html
@@ -293,14 +293,14 @@
 
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch02.jpg" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch02.JPG" class="img-fluid rounded">
               </div>
               <!-- <div class="col col-md-3 col-12">
                 <img src="./imgs/cpsc581/p0/sketch07.jpg" class="img-fluid rounded">
               </div> -->
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch04.jpg" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch04.JPG" class="img-fluid rounded">
               </div>
 
             </div>
@@ -334,7 +334,7 @@
 
               <div class="col col-md-6 col-12">
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch05.jpg" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p0/sketch05.JPG" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> This was an idea I had for a more simplistic representation, with the center donut being the only interaction. Once clicked, more donuts would appear below (using physics effects to have them move around). As the mountain of donuts grew, Homer's phrases would sound off at different times.</figcaption>
                 </figure>
                 <br>
