Updated to project 0-2

--- a/CPSC581.html
+++ b/CPSC581.html
@@ -88,15 +88,15 @@
         <div class="row">
 
           <!-- Skills -->
-          <div class="col col-md-12 col-lg-4">
+          <div class="col-12">
 
             <h3 class="border-bottom">Overview</h3>
 
-            <p>This page contains the projects I worked on (or am working on) for the class CPSC 581 - Human Computer Interaction II. In this class I’ve learned more about design process and idea generation and ideation. These small-scale projects showcase working with different technologies to brainstorm, design, and implement creative user interfaces in a variety of environments. </p>
+            <p style="font-size: 1.2rem;">This page contains the projects I worked on for the class CPSC 581 - Human Computer Interaction II. In this class I’ve learned more about design process and idea generation and ideation. These small-scale projects showcase working with different technologies to brainstorm, design, and implement creative user interfaces in a variety of environments. </p>
 
           </div>
 
-          <div class="col col-md-12 col-lg-8">
+          <div class="col-12">
             <h3 class="border-bottom">Projects</h3>
 
             <!--Highlighted Projects Container  -->
@@ -258,7 +258,7 @@
     <!-- Project: Full Descriptions -->
 
 
-    <!-- Project 0:   -->
+    <!-- Project 0: Homer Simpson  -->
     <div class="modal fade" id="project0Card" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
@@ -275,6 +275,32 @@
 
             <!-- Design -->
             <div class="row">
+
+              <div class="col-12 col-md-6">
+                <h4> Project Summary: </h4>
+                <br>
+
+                <p> A 'button' that was developed based on the characteristics and iconic traits of Homer Simpson. Built with JavaScript. The goal behind this project was to sketch, design, and implement a software application where the central interaction is with a button where the interaction represents some aspect of a character (i.e. their personality, character traits, behaviors).
+                </p>
+
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4> Video Demonstration: </h4>
+                <br>
+
+                <div class="d-flex justify-content-center align-items-center">
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/7ZrnEkUIJPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <br>
+                <br>
+              </div>
+
+
 
               <div class="col col-md-4 col-12">
                 <h4>Initial Sketches:</h4>
@@ -412,25 +438,21 @@
 
             <br>
 
-            <h4> Video Demonstration: </h4>
-
-            <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/7ZrnEkUIJPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-
-
-
-
-
-
 
 
           </div>
-          <div class="modal-footer">
+
+          <div class="modal-footer row">
             <!-- Button opens new page showing repository -->
-            <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a>
-            <a class="btn btn-secondary"href="https://github.com/olsakova/homerbutton" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <div class="col-12 col-md-6 content-right">
+              <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a>
+
+              <a class="btn btn-secondary"href="https://github.com/olsakova/homerbutton" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
+
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+            </div>
+
           </div>
         </div>
       </div>
@@ -455,6 +477,34 @@
             <!-- Design -->
             <div class="row">
 
+              <div class="col-12 col-lg-6">
+                <h4> Project Summary: </h4>
+                <br>
+
+                <p> Two different iOS apps that each simulate a creative way to unlock your phone. Developed using Xcode and Swift. The goal behind this project was to sketch, design, and implement an animated touch-based and sensor based interface for a mobile phone as an alternative way of unlocking the device.
+                </p>
+
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12 col-lg-6">
+                <h4> Video Demonstrations: </h4>
+
+
+                              <iframe class=""width="200" height="315" src="https://www.youtube.com/embed/Va8JOBrea1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+
+                              <iframe width="200" height="315" src="https://www.youtube.com/embed/Kdjy2oh-TSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+                <br>
+                <br>
+              </div>
+
               <div class="col col-md-5 col-12">
                 <h4>Initial Sketches:</h4>
                 <p>     Just as in project 0, for this project we started with every group member sketching 10 different ideas for creative ways to unlock your phone. We had to think of ideas that would work by touching the phone and ones that would work using the sensors on the device. My initial designs can be seen here.  </p>
@@ -473,25 +523,33 @@
             <div class="row d-flex">
 
 
-              <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p1/sketch03.jpg" class=" figure-img img-fluid rounded" width="300">
+              <div class="col-12 col-md-10">
+                <img src="./imgs/cpsc581/p1/sketch03.jpeg" class=" figure-img img-fluid rounded">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch05.jpg" class="img-fluid rounded">
-                <br>
-                <br>
-                <img src="./imgs/cpsc581/p1/sketch07.jpg" class="img-fluid rounded">
               </div>
 
-              <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p1/sketch04.jpg" class="img-fluid rounded" width="300">
+              <div class="col-12 col-md-10">
+                <img src="./imgs/cpsc581/p1/sketch04.jpg" class="img-fluid rounded">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch06.jpg" class="img-fluid rounded">
-                <br>
-                <br>
-                <img src="./imgs/cpsc581/p1/sketch08.jpg" class="img-fluid rounded">
               </div>
+
+
+              <div class="col-12 col-md-6">
+                <img src="./imgs/cpsc581/p1/sketch05.jpeg" class="img-fluid rounded">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch07.jpeg" class="img-fluid rounded">
+              </div>
+
+              <div class="col-12 col-md-6">
+                <img src="./imgs/cpsc581/p1/sketch06.jpeg" class="img-fluid rounded">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch08.jpeg" class="img-fluid rounded">
+              </div>
+
 
             </div>
 
@@ -509,21 +567,21 @@
 
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch09.jpg" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch09.jpeg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch10.jpg" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch10.jpeg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch12.jpg" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch12.jpeg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me)</figcaption>
                 </figure>
 
@@ -626,17 +684,7 @@
 
             <br>
 
-            <h4> Video Demonstrations: </h4>
 
-            <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/Va8JOBrea1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <br>
-            <br>
-
-            <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/Kdjy2oh-TSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
 
 
 
@@ -654,7 +702,7 @@
 
 
 
-    <!-- Project 2 -->
+    <!-- Project 2: Washing Machine Notifier  -->
     <div class="modal fade" id="project2Card" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
@@ -672,38 +720,65 @@
             <!-- Design -->
             <div class="row">
 
+              <div class="col-12 col-md-6">
+                <h4> Project Summary: </h4>
+                <br>
+
+                <p> A project built using Arduino that allows a user to be notified when their laundry is done. The purpose behind this project was to create a physical prototype with Arduino to solve an everyday problem. 
+                </p>
+
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4> Video Demonstration: </h4>
+
+                <div class="d-flex justify-content-center align-items-center">
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/xsy5i1rr-PA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <br>
+                <br>
+
+                <br>
+                <br>
+              </div>
+
               <div class="col col-md-12 col-12">
                 <h4>Initial Sketches:</h4>
                 <p>     For this project, each member of the group started out by sketching 10 different ideas. This project required us to solve an 'everyday' problem, using an arduino and some type of sensor. For my ideas, I found a lot of the ones I thought up of involved some kind of app, which turned out being more complicated to implement. However I found that the ideas involving an app were the ones I was most likely to use. My initial designs can be seen here. (Still working on getting them to rotate!)  </p>
 
               </div>
 
-
-              <div>
-                <img src="./imgs/cpsc581/p2/1sketch.png" class="img-fluid rounded" >
+              <div class="col-12 col-md-6">
+                <img src="./imgs/cpsc581/p2/sketch1.jpeg" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch2.JPG" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch2.jpeg" class="img-fluid rounded" >
                 <br>
                 <br>
 
-                <img src="./imgs/cpsc581/p2/sketch3.JPG" class="img-fluid rounded" >
-                <br>
-                <br>
-
-                <img src="./imgs/cpsc581/p2/sketch4.JPG" class="img-fluid rounded" >
-                <br>
-                <br>
-
-                <img src="./imgs/cpsc581/p2/sketch5.JPG" class="img-fluid rounded" >
-                <br>
-                <br>
-
-                <img src="./imgs/cpsc581/p2/sketch6.jpg" class="img-fluid rounded" >
+                <img src="./imgs/cpsc581/p2/sketch3.jpeg" class="img-fluid rounded" >
                 <br>
                 <br>
               </div>
+
+              <div class="col-12 col-md-6">
+                <img src="./imgs/cpsc581/p2/sketch4.jpeg" class="img-fluid rounded" >
+                <br>
+                <br>
+
+                <img src="./imgs/cpsc581/p2/sketch5.jpeg" class="img-fluid rounded" >
+                <br>
+                <br>
+
+                <img src="./imgs/cpsc581/p2/sketch6.jpeg" class="img-fluid rounded" >
+                <br>
+                <br>
+              </div>
+
 
 
 
@@ -832,16 +907,6 @@
 
 
             <br>
-
-            <h4> Video Demonstration: </h4>
-
-            <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/xsy5i1rr-PA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <br>
-            <br>
-
-
 
 
 
