--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <br>
           <h2>Hello!</h2>
           <h3>Welcome to my website!</h3>
-          <p>I am a third-year student at the University of Calgary currently pursuing a combined degree in Business and Computer Science with concentrations in Entrepreneurship and Software Engineering (yes it’s a mouthful, but really not too complicated). This website features many of the projects I have worked on.</p>
+          <p>I am a third-year student at the University of Calgary currently pursuing a combined degree in Business and Computer Science with concentrations in Entrepreneurship and Software Engineering. This website features many of the projects I have worked on.</p>
         </div>
         <div class="col col-sm-6 col-12">
           <img src="./imgs/ZachAlbers2.jpeg" class="img-fluid rounded">
