--- a/projects.html
+++ b/projects.html
@@ -338,6 +338,18 @@
 
     </div>
 
+    <div class="">
+      <br>
+      <br>
+
+      <h4>More Projects Coming Soon</h4>
+
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+
 
       <!-- Project: Full Descriptions -->
 
